[gd_scene load_steps=4 format=3 uid="uid://ck5tslgj6po7o"]

[ext_resource type="Script" path="res://scenes/objects/speaker/speaker.gd" id="1_8bkjy"]
[ext_resource type="PackedScene" uid="uid://bxmjlvvonpxsb" path="res://scenes/objects/speaker/speaker_pickable_object.tscn" id="1_ox4vu"]
[ext_resource type="PackedScene" uid="uid://qrb70ua7pb1s" path="res://scenes/objects/speaker/ukulele_pickable_object.tscn" id="2_lcsfv"]

[node name="Speaker" type="Node3D"]
script = ExtResource("1_8bkjy")

[node name="SpeakerPickableObject" parent="." instance=ExtResource("1_ox4vu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.199385, 0)

[node name="UkulelePickableObject" parent="." instance=ExtResource("2_lcsfv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.395881, 0)
visible = false

[connection signal="picked_up" from="SpeakerPickableObject" to="." method="_on_speaker_pickable_object_picked_up"]
[connection signal="picked_up" from="UkulelePickableObject" to="." method="_on_ukulele_pickable_object_picked_up"]
